tests/ui/enum/enum-in-scope.stderr
error[E0530]: let bindings cannot shadow tuple structs
  --> $DIR/enum-in-scope.rs:6:9
   |
LL | struct hello(isize);
   | -------------------- the tuple struct `hello` is defined here
...
LL |     let hello = 0;
   |         ^^^^^ cannot be named the same as a tuple struct

error: aborting due to previous error

For more information about this error, try `rustc --explain E0530`.
